rename delivery -> order for consistency

--- a/translations/messages.an.yml
+++ b/translations/messages.an.yml
@@ -762,12 +762,14 @@ roles.ROLE_STORE.help: 'Propietario de botiga: chestionar botigas asignadas, che
 stores.manage: 'Chestionar'
 stores.settings: 'Achustes'
 stores.createNewDelivery: 'Creyar entrega'
+stores.createNewOrder: 'Creyar nuevo pediu'
 stores.users: 'Usuarios'
 stores.pricing_rule_set: 'Tarificación'
 stores.api_keys: 'Claus API'
 stores.deliveries: 'Entregas'
 stores.deliveries.heading: 'Entrea #%delivery_id% - %delivery_distance%'
 stores.deliveries.task_unassigned: 'No asignada'
+stores.orders: 'Pedius'
 stores.addresses: 'Adrezas'
 meta.title: 'Plataforma de lochistica pa cooperativas'
 admin.settings.missing_mandatory_settings: "Qualques achustes obligatorios no han\
