--- a/translations/messages.eu.yml
+++ b/translations/messages.eu.yml
@@ -666,12 +666,14 @@ roles.ROLE_ADMIN.help: "Administratzailea: Sarbide osoa ezaugarri guztietara\n"
 stores.manage: 'Kudeatu'
 stores.settings: 'Ezarpenak'
 stores.createNewDelivery: 'Sortu banaketa'
+stores.createNewOrder: 'Sortu eskaera berria'
 stores.users: 'Erabiltzaileak'
 stores.pricing_rule_set: 'Prezioak'
 stores.api_keys: 'API gakoak'
 stores.deliveries: 'Banaketak'
 stores.deliveries.heading: '#%delivery_id% banaketa - %delivery_distance%'
 stores.deliveries.task_unassigned: 'Esleitu gabe'
+stores.orders: 'Eskaerak'
 stores.addresses: 'Helbideak'
 index.map.tip: 'Erabili mapa jatetxeak bilatzeko'
 index.our_restaurants: 'Gure jatetxeak'
