--- a/translations/messages.sv.yml
+++ b/translations/messages.sv.yml
@@ -100,3 +100,5 @@ order.payments: 'Betalningar'
 payment.state.cart: 'Varukorg'
 order.list.total: 'Totalt'
 order.list.shippedAt: 'Leveranstid'
+stores.createNewOrder: 'Skapa ny beställning'
+stores.orders: 'Beställningar'
