added: missing translations

--- a/js/app/i18n/locales/an.json
+++ b/js/app/i18n/locales/an.json
@@ -20,11 +20,15 @@
         "fulfilled": "Entregau",
         "cancelled": "Anulau",
         "ready": "Presto",
+        "DEPRECATED": "Obsoleto",
         "DASHBOARD_ASSIGNED": "Asignau",
         "ADMIN_DASHBOARD_NORMAL": "Normal",
         "ADMIN_DASHBOARD_RUSH": "Hora punta",
         "ADMIN_DASHBOARD_COURIER": "Mensachero",
         "ADMIN_DASHBOARD_COURIERS": "Mensacheros",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Crear una fayena independient (obsoleto)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Crear una regla de recurrencia (obsoleto)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "Esta ye una manera obsoleta de crear reglas de recurrencia, por favor configura la recurrencia a traviés d'un formulario d'entrega.",
         "ADMIN_DASHBOARD_CANCEL": "Cancelar",
         "ADMIN_DASHBOARD_CANCEL_TASK": "Cancelar",
         "ADMIN_DASHBOARD_DUPLICATE_TASK": "Duplicar",
@@ -144,6 +148,7 @@
         "RULE_PICKER_LINE_DROPOFF_DOORSTEP": "Entrega a domicilio",
         "RULE_PICKER_LINE_PACKAGES": "Paquetz",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Entrega",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Obsoleto",
         "ORDER_LIST_STATE": "Estau",
         "ORDER_LIST_PREPARATION_TIME": "Hora de preparación",
         "ORDER_LIST_PICKUP_TIME": "Hora de recullida",
