--- a/js/app/i18n/locales/ca.json
+++ b/js/app/i18n/locales/ca.json
@@ -18,11 +18,15 @@
         "fulfilled": "Entregat",
         "cancelled": "Anul·lat",
         "ready": "Preparat",
+        "DEPRECATED": "Obsolet",
         "DASHBOARD_ASSIGNED": "Assignat",
         "ADMIN_DASHBOARD_NORMAL": "Normal",
         "ADMIN_DASHBOARD_RUSH": "Pic de feina",
         "ADMIN_DASHBOARD_COURIER": "Missatger",
         "ADMIN_DASHBOARD_COURIERS": "Missatgers",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Crear una tasca independent (obsolet)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Crear una regla de recurrència (obsolet)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "Aquesta és una manera obsoleta de crear regles de recurrència, si us plau configureu la recurrència a través d'un formulari de lliurament.",
         "ADMIN_DASHBOARD_CANCEL": "Cancel·lar",
         "ADMIN_DASHBOARD_CANCEL_TASK": "Cancel·lar",
         "ADMIN_DASHBOARD_DUPLICATE_TASK": "Duplicar",
@@ -194,6 +198,7 @@
         "CART_ADDRESS_MODAL_NO_THANKS_TAKEAWAY": "Recolliré la comanda jo mateix/a",
         "ORDER_LIST_TOTAL": "Total",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Lliurament a domicili",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Obsolet",
         "RULE_PICKER_LINE_PACKAGES": "Paquets",
         "USER_EDIT_ENABLED_LABEL": "Activat",
         "ADMIN_DASHBOARD_SETTINGS_CLUSTERS_ENABLED": "Clúster de mapes activat",
