--- a/js/app/i18n/locales/cs.json
+++ b/js/app/i18n/locales/cs.json
@@ -56,6 +56,7 @@
         "ready": "Připraveno",
         "cancelled": "Zrušeno",
         "fulfilled": "Doručeno",
+        "DEPRECATED": "Zastaralé",
         "refused": "Odmítnuto",
         "accepted": "Přijato",
         "new": "Nové objednávky",
@@ -196,6 +197,7 @@
         "ORDER_LIST_PREPARATION_TIME": "Čas přípravy",
         "ORDER_LIST_STATE": "Stav",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Doručení",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Zastaralé",
         "RULE_PICKER_LINE_PACKAGES": "Balíčky",
         "RULE_PICKER_LINE_DROPOFF_DOORSTEP": "Doručení ke dveřím",
         "RULE_PICKER_LINE_PICKUP_DIFF_HOURS": "Rozdíl (hodin)",
@@ -258,6 +260,9 @@
         "ADMIN_DASHBOARD_MOVE_TO_NEXT_WORKING_DAY_MULTI": "Přesunout ({{count}}) úkolů na následující pracovní den ({{nextWorkingDay}})",
         "ADMIN_DASHBOARD_MOVE_TO_NEXT_DAY_MULTI": "Přesunout ({{count}}) úkolů na další den",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Zobrazit pravidla opakování",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Vytvořit samostatný úkol (zastaralé)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Vytvořit pravidlo opakování (zastaralé)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "Toto je zastaralý způsob vytváření pravidel opakování, prosím nastavte opakování prostřednictvím formuláře doručení.",
         "PAYMENT_FORM_NOT_SUPPORTED": "Karty Ticket Restaurant (zatím!) Nepřijímáme, použijte prosím klasickou kreditní kartu.",
         "PRICE_RANGE_EDITOR": {
             "TYPE_RANGE": "Cena včetně DPH podle rozsahů",
