--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -364,6 +364,9 @@
         "RULE_TARGET_DELIVERY": "Aplicar una vez por pedido si:",
         "RULE_TARGET_TASK": "Aplicar por cada punto (tarea de RECOGIDA y/o ENTREGA) si:",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Mostrar pedidos recurrentes",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Crear una tarea independiente (obsoleto)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Crear una regla de recurrencia (obsoleto)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "Esta es una forma obsoleta de crear reglas de recurrencia, por favor configure la recurrencia a través de un formulario de entrega en su lugar.",
         "ADMIN_DASHBOARD_ONLY_UNASSIGNED_WITH_SHIFT": "Solo la columna de tareas no asignadas maneja la selección con la tecla shift",
         "RECURRENCE_RULE_ADD": "Agregar regla de recurrencia",
         "RECURRENCE_RULE_DAYS_REQUIRED": "Por favor, elija al menos un día",
