--- a/js/app/i18n/locales/eu.json
+++ b/js/app/i18n/locales/eu.json
@@ -20,6 +20,7 @@
         "fulfilled": "Banatuta",
         "cancelled": "Utzita",
         "ready": "Prest",
+        "DEPRECATED": "Zaharkitua",
         "DASHBOARD_ASSIGNED": "Esleituta",
         "ADMIN_DASHBOARD_NORMAL": "Normala",
         "ADMIN_DASHBOARD_RUSH": "Puntako ordua",
@@ -149,6 +150,7 @@
         "RULE_PICKER_LINE_DROPOFF_DOORSTEP": "Ateaurreko banaketa",
         "RULE_PICKER_LINE_PACKAGES": "Paketeak",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Banaketa",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Zaharkitua",
         "ORDER_LIST_STATE": "Egoera",
         "ORDER_LIST_PREPARATION_TIME": "Prestakuntza-denbora",
         "ORDER_LIST_PICKUP_TIME": "Jasotze-ordua",
@@ -262,6 +264,9 @@
         "PAYMENT_FORM_TITLE": "Zure ordainketa informazioa",
         "PAYMENT_FORM_NOT_SUPPORTED": "Ez ditugu Ticket Restaurant txartelak onartzen (oraindik!). Mesedez, erabili kreditu-txartel bat.",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Erakutsi errepikapen-arauak",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Sortu zeregin independente bat (zaharkitua)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Sortu errepikapen-arau bat (zaharkitua)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "Hau errepikapen-arauak sortzeko modu zaharkitua da, mesedez konfiguratu errepikatzea banaketa-formulario baten bidez.",
         "ADMIN_DASHBOARD_DELETE_GROUP_CONFIRM": "Ziur zaude talde honetako zeregin guztiak ezabatu nahi dituzula?",
         "PRICE_RANGE_EDITOR": {
             "FOR_EVERY": "bakoitzeko",
