--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -430,6 +430,9 @@
         "ORDER_DELAYED_NOTIFICATION": "La commande {{orderNumber}} a été retardée. Nouveau créneau de livraison : {{shippingTimeRange}}",
         "ADMIN_DASHBOARD_RECURRENCE_RULE_MODAL_TITLE": "Règle récurrente",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Montrer les règles récurrentes",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Créer une tâche autonome (obsolète)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Créer une règle de récurrence (obsolète)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "Il s'agit d'une méthode obsolète de création de règles de récurrence, veuillez configurer la récurrence via un formulaire de livraison à la place.",
         "ADMIN_RECURRENCE_RULE_NAME_PLACEHOLDER": "Nom de la règle",
         "RULE_PICKER_LINE_TASK_TYPE": "Type de tâche",
         "RECURRENCE_RULE_ADD": "Ajouter une règle de récurrence",
