--- a/js/app/i18n/locales/hu.json
+++ b/js/app/i18n/locales/hu.json
@@ -17,6 +17,7 @@
         "fulfilled": "Kiszállítva",
         "cancelled": "Törölve",
         "ready": "Kész",
+        "DEPRECATED": "Elavult",
         "DASHBOARD_ASSIGNED": "Hozzárendelve",
         "ADMIN_DASHBOARD_COURIER": "Futár",
         "ADMIN_DASHBOARD_CANCEL": "Törlés",
@@ -132,6 +133,7 @@
         "RULE_PICKER_LINE_DROPOFF_DOORSTEP": "Ajtó előtti leadás",
         "RULE_PICKER_LINE_PACKAGES": "Csomagok",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Szállítás",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Elavult",
         "ORDER_LIST_STATE": "Státusz",
         "ORDER_LIST_PREPARATION_TIME": "Előkészítési idő",
         "ORDER_LIST_PICKUP_TIME": "Felvétel időpontja",
@@ -200,6 +202,9 @@
         "PAYMENT_FORM_CARDHOLDER_NAME": "Kártyatulajdonos neve",
         "PAYMENT_FORM_TITLE": "Fizetési információk",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Ismétlődő szabályok megjelenítése",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Önálló feladat létrehozása (elavult)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Ismétlődési szabály létrehozása (elavult)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "Ez egy elavult módja az ismétlődési szabályok létrehozásának, kérjük állítsa be az ismétlődést egy szállítási űrlapon keresztül.",
         "ADMIN_DASHBOARD_DELETE_GROUP_CONFIRM": "Biztos vagy benne, hogy törölni akarod az összes feladatot ebben a csoportban?",
         "PRICE_RANGE_EDITOR": {
             "FOR_EVERY": "mindegyikre",
