--- a/js/app/i18n/locales/it.json
+++ b/js/app/i18n/locales/it.json
@@ -29,6 +29,7 @@
         "fulfilled": "Consegnato",
         "cancelled": "Cancellato",
         "ready": "Pronto",
+        "DEPRECATED": "Obsoleto",
         "UNDO": "Annulla",
         "ADMIN_DASHBOARD_OPTIMIZATION_UNASSIGNED_TASKS": "{{ count }} elemento(i) sono stati non assegnati perché non rispettavano i vincoli.",
         "ADMIN_DASHBOARD_OPTIMIZATION_DONE": "Le assegnazioni sono state ottimizzate. La distanza precedente era {{ previousDistance }}, la durata precedente {{ previousDuration }}.",
@@ -271,6 +272,9 @@
         },
         "ADMIN_DASHBOARD_DELETE_GROUP_CONFIRM": "Sei sicuro di voler cancellare tutti gli incarichi di questo gruppo?",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Mostrare regole ricorrenti",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Crea un'attività autonoma (obsoleto)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Crea una regola di ricorrenza (obsoleto)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "Questo è un modo obsoleto di creare regole di ricorrenza, si prega di impostare la ricorrenza tramite un modulo di consegna invece.",
         "PAYMENT_FORM_NOT_SUPPORTED": "Non accettiamo (ancora!) buoni pasto, per favore utilizza una carta di credito classica.",
         "ADMIN_DASHBOARD_VIEW_MODE_DROPOFF_ASC": "Mostrare consegne in maniera ascendente",
         "ADMIN_DASHBOARD_MOVE_TO_NEXT_WORKING_DAY_MULTI": "Spostare {{count}} incarichi al prossimo giorno lavorativo ({{nextWorkingDay}})",
@@ -312,6 +316,7 @@
         "CART_PRODUCT_OPTIONS_VALUES_RANGE_AT_LEAST": "Per favore scegli almeno {{count}} valore(i)",
         "CART_PRODUCT_OPTIONS_VALUES_RANGE": "Per favore scegli tra i valori {{min}} e {{max}}",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Consegna",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Obsoleto",
         "RULE_PICKER_LINE_PACKAGES": "Pacchetti",
         "RULE_PICKER_LINE_PICKUP_DIFF_HOURS": "Differenza (ore)",
         "ADMIN_DASHBOARD_SETTINGS_CLUSTERS_ENABLED": "Map clusters abilitato",
