--- a/js/app/i18n/locales/pl.json
+++ b/js/app/i18n/locales/pl.json
@@ -59,6 +59,7 @@
         "RULE_PICKER_LINE_WEIGHT": "Waga (kg)",
         "RULE_PICKER_LINE_DISTANCE": "Dystans (km)",
         "RULE_PICKER_ADD_CONDITION": "Dodaj warunek",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Przestarzałe",
         "ORDER_TIMELINE_AFTER_PICKED_DESCRIPTION": "Przygotuj się!",
         "ORDER_TIMELINE_AFTER_PICKED_TITLE": "Kurier/ka nadjeżdża!",
         "ORDER_TIMELINE_AFTER_CREATED_DESCRIPTION": "Restauracja musi potwierdzić twoje zamówienie. W przypadku odmowy, żadna kwota nie zostanie pobrana z twojej karty",
@@ -163,12 +164,16 @@
         "ADMIN_DASHBOARD_CANCEL": "Anulować",
         "ADMIN_DASHBOARD_COURIER": "Kurier/Kurierka",
         "ADMIN_DASHBOARD_COURIERS": "Kuriéri",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Utwórz samodzielne zadanie (przestarzałe)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Utwórz regułę powtarzania (przestarzałe)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "To jest przestarzały sposób tworzenia reguł powtarzania, proszę skonfigurować powtarzanie za pomocą formularza dostawy.",
         "ADMIN_DASHBOARD_RUSH": "Godzina szczytu",
         "ADMIN_DASHBOARD_NORMAL": "Normalny",
         "DASHBOARD_ASSIGNED": "Przydzielony",
         "ready": "Gotowe",
         "cancelled": "Anulowane",
         "fulfilled": "Dostarczone",
+        "DEPRECATED": "Przestarzałe",
         "refused": "Odmowa",
         "accepted": "Zaakceptowany",
         "new": "Nowy",
