--- a/js/app/i18n/locales/pt_BR.json
+++ b/js/app/i18n/locales/pt_BR.json
@@ -20,11 +20,15 @@
         "fulfilled": "Entregue",
         "cancelled": "Cancelado",
         "ready": "Pronto",
+        "DEPRECATED": "Obsoleto",
         "DASHBOARD_ASSIGNED": "Atribuído",
         "ADMIN_DASHBOARD_NORMAL": "Normal",
         "ADMIN_DASHBOARD_RUSH": "Pressa",
         "ADMIN_DASHBOARD_COURIER": "Courier",
         "ADMIN_DASHBOARD_COURIERS": "Couriers",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Criar uma tarefa independente (obsoleto)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Criar uma regra de recorrência (obsoleto)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "Esta é uma forma obsoleta de criar regras de recorrência, por favor configure a recorrência através de um formulário de entrega.",
         "ADMIN_DASHBOARD_CANCEL": "Cancelar",
         "ADMIN_DASHBOARD_CANCEL_TASK": "Cancelar",
         "ADMIN_DASHBOARD_DUPLICATE_TASK": "Duplicar",
@@ -143,6 +147,7 @@
         "RULE_PICKER_LINE_DROPOFF_DOORSTEP": "Entrega a domicílio",
         "RULE_PICKER_LINE_PACKAGES": "Embalagens",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Entrega",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Obsoleto",
         "ORDER_LIST_STATE": "Estado",
         "ORDER_LIST_PREPARATION_TIME": "Tempo de preparo",
         "ORDER_LIST_PICKUP_TIME": "Horário de coleta",
