--- a/js/app/i18n/locales/pt_PT.json
+++ b/js/app/i18n/locales/pt_PT.json
@@ -20,6 +20,7 @@
         "fulfilled": "Entregue",
         "cancelled": "Cancelado",
         "ready": "Pronto",
+        "DEPRECATED": "Obsoleto",
         "DASHBOARD_ASSIGNED": "Atribuído",
         "ADMIN_DASHBOARD_NORMAL": "Normal",
         "ADMIN_DASHBOARD_RUSH": "Elevada afluência",
@@ -144,6 +145,7 @@
         "RULE_PICKER_LINE_DROPOFF_DOORSTEP": "Porta da entrega",
         "RULE_PICKER_LINE_PACKAGES": "Embalagens",
         "RULE_PICKER_LINE_OPTGROUP_DELIVERY": "Entrega",
+        "RULE_PICKER_LINE_OPTGROUP_DEPRECATED": "Obsoleto",
         "ORDER_LIST_STATE": "Estado",
         "ORDER_LIST_PREPARATION_TIME": "Tempo de preparação",
         "ORDER_LIST_PICKUP_TIME": "Hora de levantamento",
@@ -230,6 +232,9 @@
         },
         "ADMIN_DASHBOARD_DELETE_GROUP_CONFIRM": "Tem certeza que pretende apagar todas as tarefas deste grupo?",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Mostrar pedidos recorrentes",
+        "ADMIN_DASHBOARD_CREATE_TASK": "Criar uma tarefa independente (obsoleto)",
+        "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Criar uma regra de recorrência (obsoleto)",
+        "ADMIN_DASHBOARD_RECURRENCE_RULE_LEGACY_WARNING": "Esta é uma forma obsoleta de criar regras de recorrência, por favor configure a recorrência através de um formulário de entrega.",
         "PAYMENT_FORM_NOT_SUPPORTED": "Não aceitamos (ainda) os cartões de Ticket Restaurante, por favor utilize um cartão de crédito comum.",
         "PAYMENT_FORM_TITLE": "Informação sobre o pagamento",
         "PAYMENT_FORM_CARDHOLDER_NAME": "Nome do titular do cartão",
