--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -39,6 +39,7 @@
         "VIEW_DOCUMENTATION": "View documentation",
         "FEATURE_PREVIEW_HELP": "The feature is available for demonstration and test purposes but may not be documented and/or feature complete. Please contact us on Slack #dev channel if you have any questions or feedback.",
         "LOADING": "Loading...",
+        "MORE": "More",
         "ADMIN_DEFAULT_DELETION_ERROR_MESSAGE": "Could not delete",
         "ADMIN_PLEASE_UNLINK_PACKAGE_SET_BEFORE_DELETION": "Could not delete. Please unlink this package set from stores or delivery forms it may apply",
         "ADMIN_PLEASE_UNLINK_PRICING_RULE_SET_BEFORE_DELETION": "Could not delete. Please unlink this pricing from stores, restaurants or delivery forms it may apply",
