--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -273,11 +273,15 @@
         "PRICING_PRICING_RULE_HELP": "Rules to calculate the price of the order",
         "PRICING_PRICING_RULE_DOCS_PATH": "/en/admin/pricing_rule/",
         "PRICING_ADD_RULE": "Add rule per order",
+        "PRICING_ADD_RULE_LEGACY": "Add rule",
         "PRICING_ADD_RULE_HELP": "Add a rule to be applied once per order, recommended for simple deliveries (one pickup, one dropoff) and Food Tech orders",
         "PRICING_ADD_RULE_PER_TASK": "Add rule per point",
         "PRICING_ADD_RULE_PER_TASK_HELP": "Add a rule to be applied per each point (PICKUP and/or DROPOFF task), recommended for complex, multi-point deliveries",
+        "RULE_TARGET_DELIVERY_TITLE": "Rules per order",
         "RULE_TARGET_DELIVERY": "Apply once per order if:",
+        "RULE_TARGET_TASK_TITLE": "Rules per point",
         "RULE_TARGET_TASK": "Apply per each point (PICKUP and/or DROPOFF task) if:",
+        "RULE_LEGACY_TARGET_DYNAMIC_TITLE": "Legacy Rules",
         "RULE_LEGACY_TARGET_DYNAMIC": "Simple deliveries (one pickup, one dropoff): apply once per order; Multi-point deliveries: apply per each point (PICKUP and/or DROPOFF task) if:",
         "RULE_LEGACY_TARGET_DYNAMIC_HELP": "This rule is deprecated in favor of separate rules applied either once per order or per each point. Please consider migrating to the new format. (See the migration guide above)",
         "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_RATIONALE": "This pricing scheme contains deprecated rules applied differently for simple deliveries (one pickup, one dropoff) and complex, multi-point deliveries, making them error-prone. Thus, the usage of such rules is discouraged. Please consider migrating to the new format:",
@@ -285,6 +289,20 @@
         "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_DELIVERY_HELP": "(choose this option if you use this pricing scheme for Food Tech orders or simple deliveries (one pickup, one dropoff))",
         "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_TASK": "Switch to: Apply rules per each point (PICKUP and/or DROPOFF task)",
         "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_TARGET_TASK_HELP": "(choose this option if you use this pricing scheme for complex, multi-point deliveries)",
+        "FORM_PRICING_RULE_SET_NAME_LABEL": "Name",
+        "FORM_PRICING_RULE_SET_RULES_LABEL": "Rules",
+        "FORM_PRICING_RULE_SET_RULES_DOCS_PATH": "/en/admin/pricing_rule/",
+        "FORM_PRICING_RULE_SET_STRATEGY_LABEL": "Method of calculation",
+        "FORM_PRICING_RULE_SET_STRATEGY_DOCS_PATH": "/en/admin/pricing_method_of_calculation",
+        "FORM_PRICING_RULE_SET_STRATEGY_HELP": "The rules are evaluated from top to bottom, and 'Rules per point' are evaluated before 'Rules per order'. Depending on the method of calculation selected, either the first rule that matches will decide the price, or the price will be calculated by adding all the matching rules.",
+        "FORM_PRICING_RULE_SET_STRATEGY_FIND_LABEL": "The first rule that matches",
+        "FORM_PRICING_RULE_SET_STRATEGY_MAP_LABEL": "All the matching rules",
+        "FORM_PRICING_RULE_SET_NO_RULE_FOUND": "No pricing rule found. Pricing rules define how the delivery cost is calculated.",
+        "FORM_PRICING_RULE_SET_PRICING_RULE_NAME_LABEL": "Name (displayed to a client)",
+        "FORM_PRICING_RULE_SET_PRICING_RULE_NAME_PLACEHOLDER": "e.g. Urgent delivery",
+        "FORM_PRICING_RULE_SAVE_ERROR": "An error occurred while saving rule {{ name }}",
+        "FORM_PRICING_RULE_EXPRESSION_REQUIRED": "Add at least one condition",
+        "FORM_PRICING_RULE_PRICE_REQUIRED": "Add a price",
         "RULE_PICKER_ADD_CONDITION": "Add condition",
         "RULE_PICKER_LINE_DISTANCE": "Distance (km)",
         "RULE_PICKER_LINE_WEIGHT_TARGET_DELIVERY": "Weight (kg) (total)",
@@ -726,20 +744,6 @@
         "SWITCH_BACK_TIMESLOTPICKER": "Back to timeslot picker",
         "PAYMENT_FORM_ERROR": "Sorry, we could not process your payment",
         "TRY_AGAIN": "Try again",
-        "ADMIN_DASHBOARD_NO_TIMESLOTS_AVAILABLE": "There are no choices available for this time slot. Please contact an admin if it blocks you to create a delivery.",
-        "FORM_PRICING_RULE_SET_NAME_LABEL": "Name",
-        "FORM_PRICING_RULE_SET_RULES_LABEL": "Rules",
-        "FORM_PRICING_RULE_SET_RULES_DOCS_PATH": "/en/admin/pricing_rule/",
-        "FORM_PRICING_RULE_SET_STRATEGY_LABEL": "Method of calculation",
-        "FORM_PRICING_RULE_SET_STRATEGY_DOCS_PATH": "/en/admin/pricing_method_of_calculation",
-        "FORM_PRICING_RULE_SET_STRATEGY_HELP": "The rules are evaluated from top to bottom, and 'Rules per point' are evaluated before 'Rules per order'. Depending on the method of calculation selected, either the first rule that matches will decide the price, or the price will be calculated by adding all the matching rules.",
-        "FORM_PRICING_RULE_SET_STRATEGY_FIND_LABEL": "The first rule that matches",
-        "FORM_PRICING_RULE_SET_STRATEGY_MAP_LABEL": "All the matching rules",
-        "FORM_PRICING_RULE_SET_NO_RULE_FOUND": "No pricing rule found. Pricing rules define how the delivery cost is calculated.",
-        "FORM_PRICING_RULE_SET_PRICING_RULE_NAME_LABEL": "Name (displayed to a client)",
-        "FORM_PRICING_RULE_SET_PRICING_RULE_NAME_PLACEHOLDER": "e.g. Urgent delivery",
-        "FORM_PRICING_RULE_SAVE_ERROR": "An error occurred while saving rule {{ name }}",
-        "FORM_PRICING_RULE_EXPRESSION_REQUIRED": "Add at least one condition",
-        "FORM_PRICING_RULE_PRICE_REQUIRED": "Add a price"
+        "ADMIN_DASHBOARD_NO_TIMESLOTS_AVAILABLE": "There are no choices available for this time slot. Please contact an admin if it blocks you to create a delivery."
     }
 }
