--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1623,3 +1623,11 @@ form.settings.accounting_account.label: "Code comptable"
 form.settings.accounting_account.help: "Le code comptable par défaut pour enregistrer les commandes de livraison à la demande dans le système comptable."
 restaurant.stats.show_only_meal_vouchers: Afficher uniquement les commandes payées en titres-restaurant
 restaurant.stats.show_all: Afficher toutes les commandes
+pricing.rule.humanizer.inside_zone: dans
+pricing.rule.humanizer.outside_zone: hors
+pricing.rule.humanizer.address_zone_format: 'adresse %task_type% %direction% zone "%zone_name%"'
+pricing.rule.humanizer.between: entre %left% et %right%
+pricing.rule.humanizer.less_than: moins de %value%
+pricing.rule.humanizer.more_than: plus de %value%
+pricing.rule.humanizer.kg_unit: '%value% kg'
+pricing.rule.humanizer.km_unit: '%value% km'
