--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1693,3 +1693,8 @@ pricing.rule.humanizer.less_than: less than %value%
 pricing.rule.humanizer.more_than: more than %value%
 pricing.rule.humanizer.kg_unit: '%value% kg'
 pricing.rule.humanizer.km_unit: '%value% km'
+pricing.rule.humanizer.task_type_is: '%value% at point'
+pricing.rule.humanizer.time_range_length: '%task_type% time window %operator% %value%'
+pricing.rule.humanizer.diff: '%task_type% prior notice %operator% %value%'
+pricing.rule.humanizer.order_items_total: cart total %operator% %value%
+pricing.rule.humanizer.packages_volume_units: package volume %operator% %value%
