--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1623,6 +1623,9 @@ form.settings.accounting_account.label: "Code comptable"
 form.settings.accounting_account.help: "Le code comptable par défaut pour enregistrer les commandes de livraison à la demande dans le système comptable."
 restaurant.stats.show_only_meal_vouchers: Afficher uniquement les commandes payées en titres-restaurant
 restaurant.stats.show_all: Afficher toutes les commandes
+pricing.variant.pickup_point: Point de retrait %number%
+pricing.variant.dropoff_point: Point de dépôt %number%
+pricing.variant.order_supplement: Supplément de commande
 pricing.rule.humanizer.inside_zone: dans
 pricing.rule.humanizer.outside_zone: hors
 pricing.rule.humanizer.address_zone_format: 'adresse %task_type% %direction% zone "%zone_name%"'
